// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminSettings.vue Nextcloud OAuth values form edit mode should show the form and hide the field values 1`] = `
<div class="nextcloud-oauth-values">
  <formheading-stub index="3" title="Nextcloud OAuth client" iscomplete="true"></formheading-stub>
  <div>
    <textinput-stub value="nc-client-id" id="nextcloud-oauth-client-id" type="text" placeholder="" label="Nextcloud OAuth client ID" hinttext="Copy the following values back into the OpenProject {htmlLink} as an Administrator." isrequired="true" withcopybtn="true" readonly="true" class="py-1"></textinput-stub>
    <textinput-stub value="nc-client-secret" id="nextcloud-oauth-client-secret" type="text" placeholder="" label="Nextcloud OAuth client secret" hinttext="Copy the following values back into the OpenProject {htmlLink} as an Administrator." isrequired="true" withcopybtn="true" readonly="true" class="py-1"></textinput-stub>
    <div class="form-actions">
      <button-stub type="primary" nativetype="button" data-test-id="submit-nc-oauth-values-form-btn">
        Yes, I have copied these values
      </button-stub>
    </div>
  </div>
</div>
`;

exports[`AdminSettings.vue Nextcloud OAuth values form view mode with complete values should show the field values and hide the form 1`] = `
<div class="nextcloud-oauth-values">
  <formheading-stub index="3" title="Nextcloud OAuth client" iscomplete="true"></formheading-stub>
  <div>
    <fieldvalue-stub title="Nextcloud OAuth client ID" value="some-nc-client-id-here" isrequired="true"></fieldvalue-stub>
    <fieldvalue-stub title="Nextcloud OAuth client secret" value="some-nc-client-secret-here" isrequired="true" encryptvalue="true" withinspection="true"></fieldvalue-stub>
    <div class="form-actions">
      <button-stub type="secondary" nativetype="button" data-test-id="reset-nc-oauth-btn">
        Replace Nextcloud OAuth values
      </button-stub>
    </div>
  </div>
</div>
`;

exports[`AdminSettings.vue OpenProject OAuth values form edit mode should show the form and hide the field values 1`] = `
<div class="openproject-oauth-values">
  <div class="form-heading">
    <div class="index">
      2
    </div>
    <div class="title">
      OpenProject OAuth settings
    </div>
  </div>
  <div>
    <div class="text-input py-1">
      <div class="text-input-label">
        OpenProject OAuth client ID *
      </div>
      <div class="text-input-input-wrapper"><input id="openproject-oauth-client-id" type="text" placeholder="" class="">
        <!---->
      </div>
      <div>
        <div class="text-input-hint">Go to your OpenProject {htmlLink} as an Administrator and start the setup and copy the values here.</div>
      </div>
    </div>
    <div class="text-input py-1">
      <div class="text-input-label">
        OpenProject OAuth client secret *
      </div>
      <div class="text-input-input-wrapper"><input id="openproject-oauth-client-secret" type="text" placeholder="" class="">
        <!---->
      </div>
      <div>
        <div class="text-input-hint">Go to your OpenProject {htmlLink} as an Administrator and start the setup and copy the values here.</div>
      </div>
    </div>
    <div class="form-actions"><button data-v-27e36536="" type="button" disabled="disabled" data-test-id="submit-op-oauth-btn" class="button-vue button-vue--icon-and-text button-vue--vue-primary"><span data-v-27e36536="" class="button-vue__wrapper"><span data-v-27e36536="" class="button-vue__icon"><span aria-hidden="true" role="img" class="material-design-icon check-bold-icon" data-v-27e36536=""><svg fill="currentColor" width="20" height="20" viewBox="0 0 24 24" class="material-design-icon__svg"><path d="M9,20.42L2.79,14.21L5.62,11.38L9,14.77L18.88,4.88L21.71,7.71L9,20.42Z"><!----></path></svg></span></span> <span data-v-27e36536="" class="button-vue__text">
					Save
				</span></span></button></div>
  </div>
</div>
`;

exports[`AdminSettings.vue OpenProject OAuth values form view mode and completed state should show field values and hide the form if server host form is complete 1`] = `
<div class="openproject-oauth-values">
  <div class="form-heading">
    <div class="complete"><span aria-hidden="true" role="img" class="material-design-icon check-bold-icon"><svg fill="#FFFFFF" width="12" height="12" viewBox="0 0 24 24" class="material-design-icon__svg"><path d="M9,20.42L2.79,14.21L5.62,11.38L9,14.77L18.88,4.88L21.71,7.71L9,20.42Z"><!----></path></svg></span></div>
    <div class="title green-text">
      OpenProject OAuth settings
    </div>
  </div>
  <div>
    <div class="field-item"><b class="field-item-title">
        OpenProject OAuth client ID*:
      </b>
      <div class="field-item-value">
        openproject-client-id
      </div>
      <!---->
    </div>
    <div class="field-item pb-1"><b class="field-item-title">
        OpenProject OAuth client secret*:
      </b>
      <div class="field-item-value">
        openproj***************
      </div>
      <!---->
    </div>
    <div class="form-actions"><button data-v-27e36536="" type="button" data-test-id="reset-op-oauth-btn" class="button-vue button-vue--icon-and-text button-vue--vue-secondary"><span data-v-27e36536="" class="button-vue__wrapper"><span data-v-27e36536="" class="button-vue__icon"><span aria-hidden="true" role="img" class="material-design-icon autorenew-icon" data-v-27e36536=""><svg fill="currentColor" width="20" height="20" viewBox="0 0 24 24" class="material-design-icon__svg"><path d="M12,6V9L16,5L12,1V4A8,8 0 0,0 4,12C4,13.57 4.46,15.03 5.24,16.26L6.7,14.8C6.25,13.97 6,13 6,12A6,6 0 0,1 12,6M18.76,7.74L17.3,9.2C17.74,10.04 18,11 18,12A6,6 0 0,1 12,18V15L8,19L12,23V20A8,8 0 0,0 20,12C20,10.43 19.54,8.97 18.76,7.74Z"><!----></path></svg></span></span> <span data-v-27e36536="" class="button-vue__text">
					Replace OpenProject OAuth values
				</span></span></button></div>
  </div>
</div>
`;

exports[`AdminSettings.vue default user configurations form should be visible when the integration is complete 1`] = `
<div class="default-prefs">
  <h2>Default user settings</h2>
  <p>
    A new user will receive these defaults and they will be applied to the integration app till the user changes them.
  </p> <br>
  <div class="form-check-input"><input id="default-prefs--link" type="checkbox" class="checkbox" value="false"> <label for="default-prefs--link">
      Enable navigation link
    </label> </div>
  <div class="form-check-input"><input id="default-prefs--u-search" type="checkbox" class="checkbox" value="false"> <label for="default-prefs--u-search">
      Enable unified search for tickets
    </label> </div>
  <div class="form-check-input"><input id="default-prefs--notifications" type="checkbox" class="checkbox" value="false"> <label for="default-prefs--notifications">
      Enable notifications for activity in my work packages
    </label> </div>
</div>
`;

exports[`AdminSettings.vue server host url form edit mode cancel button should be visible when the form is in completed state with edit mode 1`] = `
<button data-v-27e36536="" type="button" data-test-id="cancel-edit-server-host-btn" class="button-vue mr-2 button-vue--text-only button-vue--vue-secondary"><span data-v-27e36536="" class="button-vue__wrapper"><!----> <span data-v-27e36536="" class="button-vue__text">
				Cancel
			</span></span></button>
`;

exports[`AdminSettings.vue server host url form edit mode readonly state should clear the readonly state when clicked on the input 1`] = `<input id="openproject-oauth-instance" type="text" placeholder="https://www.my-openproject.com" class="">`;

exports[`AdminSettings.vue server host url form edit mode readonly state should set the input field to readonly at first 1`] = `<input id="openproject-oauth-instance" type="text" readonly="readonly" placeholder="https://www.my-openproject.com" class="text-input-readonly">`;

exports[`AdminSettings.vue server host url form edit mode submit button should set the input to error state and display correct message when the url is invalid 1`] = `
<div class="text-input pb-1">
  <div class="text-input-label">
    OpenProject host *
  </div>
  <div class="text-input-input-wrapper"><input id="openproject-oauth-instance" type="text" readonly="readonly" placeholder="https://www.my-openproject.com" class="text-input-error text-input-readonly">
    <!---->
  </div>
  <div>
    <div>
      <div class="text-input-error-message">There is no valid OpenProject instance listening at that URL</div>
      <div class="v-popover">
        <div class="trigger" style="display: inline-block;"><a href="#" class="link">Details</a></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AdminSettings.vue server host url form edit mode submit button should set the input to error state and display correct message when the url is invalid 2`] = `
<div class="text-input pb-1">
  <div class="text-input-label">
    OpenProject host *
  </div>
  <div class="text-input-input-wrapper"><input id="openproject-oauth-instance" type="text" readonly="readonly" placeholder="https://www.my-openproject.com" class="text-input-error text-input-readonly">
    <!---->
  </div>
  <div>
    <div>
      <div class="text-input-error-message">URL is invalid</div>
      <div class="v-popover">
        <div class="trigger" style="display: inline-block;"><a href="#" class="link">Details</a></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AdminSettings.vue server host url form edit mode submit button should set the input to error state and display correct message when the url is invalid 3`] = `
<div class="text-input pb-1">
  <div class="text-input-label">
    OpenProject host *
  </div>
  <div class="text-input-input-wrapper"><input id="openproject-oauth-instance" type="text" readonly="readonly" placeholder="https://www.my-openproject.com" class="text-input-error text-input-readonly">
    <!---->
  </div>
  <div>
    <div>
      <div class="text-input-error-message">Server replied with an error message</div>
      <div class="v-popover">
        <div class="trigger" style="display: inline-block;"><a href="#" class="link">Details</a></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AdminSettings.vue server host url form edit mode submit button should set the input to error state and display correct message when the url is invalid 4`] = `
<div class="text-input pb-1">
  <div class="text-input-label">
    OpenProject host *
  </div>
  <div class="text-input-input-wrapper"><input id="openproject-oauth-instance" type="text" readonly="readonly" placeholder="https://www.my-openproject.com" class="text-input-error text-input-readonly">
    <!---->
  </div>
  <div>
    <div>
      <div class="text-input-error-message">Could not connect to the given URL, please check the NextCloud logs.</div>
      <div class="v-popover">
        <div class="trigger" style="display: inline-block;"><a href="#" class="link">Details</a></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AdminSettings.vue server host url form edit mode submit button should set the input to error state and display correct message when the url is invalid 5`] = `
<div class="text-input pb-1">
  <div class="text-input-label">
    OpenProject host *
  </div>
  <div class="text-input-input-wrapper"><input id="openproject-oauth-instance" type="text" readonly="readonly" placeholder="https://www.my-openproject.com" class="text-input-error text-input-readonly">
    <!---->
  </div>
  <div>
    <div>
      <div class="text-input-error-message">Accessing OpenProject servers with local addresses is not allowed.</div>
      <div class="v-popover">
        <div class="trigger" style="display: inline-block;"><a href="#" class="link">Details</a></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AdminSettings.vue server host url form edit mode submit button should set the input to error state and display correct message when the url is invalid 6`] = `
<div class="text-input pb-1">
  <div class="text-input-label">
    OpenProject host *
  </div>
  <div class="text-input-input-wrapper"><input id="openproject-oauth-instance" type="text" readonly="readonly" placeholder="https://www.my-openproject.com" class="text-input-error text-input-readonly">
    <!---->
  </div>
  <div>
    <div>
      <div class="text-input-error-message">Could not connect to the given URL, please check the NextCloud logs.</div>
      <div class="v-popover">
        <div class="trigger" style="display: inline-block;"><a href="#" class="link">Details</a></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AdminSettings.vue server host url form edit mode submit button should set the input to error state and display correct message when the url is invalid 7`] = `
<div class="text-input pb-1">
  <div class="text-input-label">
    OpenProject host *
  </div>
  <div class="text-input-input-wrapper"><input id="openproject-oauth-instance" type="text" readonly="readonly" placeholder="https://www.my-openproject.com" class="text-input-error text-input-readonly">
    <!---->
  </div>
  <div>
    <div>
      <div class="text-input-error-message">Could not connect to the given URL, please check the NextCloud logs.</div>
      <div class="v-popover">
        <div class="trigger" style="display: inline-block;"><a href="#" class="link">Details</a></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AdminSettings.vue server host url form edit mode submit button should set the input to error state and display correct message when the url is invalid 8`] = `
<div class="text-input pb-1">
  <div class="text-input-label">
    OpenProject host *
  </div>
  <div class="text-input-input-wrapper"><input id="openproject-oauth-instance" type="text" readonly="readonly" placeholder="https://www.my-openproject.com" class="text-input-error text-input-readonly">
    <!---->
  </div>
  <div>
    <div>
      <div class="text-input-error-message">There is no valid OpenProject instance listening at that URL</div>
      <div class="v-popover">
        <div class="trigger" style="display: inline-block;"><a href="#" class="link">Details</a></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AdminSettings.vue server host url form view mode and completed state reset button should be visible when the form is in completed state 1`] = `
<button data-v-27e36536="" type="button" data-test-id="reset-server-host-btn" class="button-vue button-vue--icon-and-text button-vue--vue-secondary"><span data-v-27e36536="" class="button-vue__wrapper"><span data-v-27e36536="" class="button-vue__icon"><span aria-hidden="true" role="img" class="material-design-icon pencil-icon" data-v-27e36536=""><svg fill="currentColor" width="20" height="20" viewBox="0 0 24 24" class="material-design-icon__svg"><path d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"><!----></path></svg></span></span> <span data-v-27e36536="" class="button-vue__text">
				Edit server information
			</span></span></button>
`;

exports[`AdminSettings.vue server host url form view mode and completed state should show field value and hide the input field 1`] = `
<div class="openproject-server-host">
  <div class="form-heading">
    <div class="complete"><span aria-hidden="true" role="img" class="material-design-icon check-bold-icon"><svg fill="#FFFFFF" width="12" height="12" viewBox="0 0 24 24" class="material-design-icon__svg"><path d="M9,20.42L2.79,14.21L5.62,11.38L9,14.77L18.88,4.88L21.71,7.71L9,20.42Z"><!----></path></svg></span></div>
    <div class="title green-text">
      OpenProject server
    </div>
  </div>
  <div class="field-item pb-1"><b class="field-item-title">
      OpenProject host*:
    </b>
    <div class="field-item-value">
      http://openproject.com
    </div>
    <!---->
  </div>
  <div class="form-actions"><button data-v-27e36536="" type="button" data-test-id="reset-server-host-btn" class="button-vue button-vue--icon-and-text button-vue--vue-secondary"><span data-v-27e36536="" class="button-vue__wrapper"><span data-v-27e36536="" class="button-vue__icon"><span aria-hidden="true" role="img" class="material-design-icon pencil-icon" data-v-27e36536=""><svg fill="currentColor" width="20" height="20" viewBox="0 0 24 24" class="material-design-icon__svg"><path d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"><!----></path></svg></span></span> <span data-v-27e36536="" class="button-vue__text">
				Edit server information
			</span></span></button>
    <!---->
    <!---->
  </div>
</div>
`;
